<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/firstFragment">

    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.aboutme.FirstFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_first_to_second"
            app:destination="@id/secondFragment" />
        <action
            android:id="@+id/action_first_to_third"
            app:destination="@id/fragmentThird" />
    </fragment>

    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.aboutme.SecondFragment"
        android:label="@string/hobbies"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/fragmentThird"
        android:name="com.example.aboutme.FragmentThird"
        android:label="@string/contact"
        tools:layout="@layout/fragment_third" />
</navigation>
